--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '18'
+          distribution: 'temurin'
 
       # Push
 
